Show post modal activated

--- a/EchoFeed/accounts/templates/accounts/reset_password.html
+++ b/EchoFeed/accounts/templates/accounts/reset_password.html
@@ -14,7 +14,7 @@
                     <i class="fa-solid fa-envelope"></i>
                 </div>
             </div>
-            <button type="submit" id="submit">Register</button>
+            <button type="submit" id="submit">Send Email</button>
     </form>
 </div>
 
