--- a/EchoFeed/feed/templates/feed/profile.html
+++ b/EchoFeed/feed/templates/feed/profile.html
@@ -195,6 +195,7 @@
 <script src="{% static 'js/editProfile.js' %}"></script>
 <script src="{% static 'js/postModal.js' %}"></script>
 {% endif %}
+<script src="{% static 'js/handleFollowUnfollow.js' %}"></script>
 <script src="{% static 'js/followUnfollow.js' %}"></script>
 <script src="{% static 'js/showFollow.js' %}"></script>
 {% endblock %}
