--- a/EchoFeed/feed/static/css/postModal.css
+++ b/EchoFeed/feed/static/css/postModal.css
@@ -1,18 +1,3 @@
-/* General Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #121212; /* Dark background */
-    color: #e0e0e0; /* Light text */
-    overflow: hidden; /* Prevent scrolling when modal is open */
-}
-
 /* Button */
 .post-modal button {
     background: none;
@@ -31,6 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    visibility: hidden;
 }
 
 /* Post Image and Comments Section */
@@ -51,6 +37,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .post-image img {
