--- a/EchoFeed/feed/templates/base.html
+++ b/EchoFeed/feed/templates/base.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <link rel="stylesheet" href="{% static "css/profile.css" %}">
     <link rel="stylesheet" href="{% static "css/searchModal.css" %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% block css %}{% endblock %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -47,7 +47,7 @@
                     </button>
                 </li>
                 <li>
-                    <a href="{% url "feed:explore" %}">
+                    <a href="{% url "feed:explore" %}" class="{% if request.path == '/explore/' %}active-link{% endif %}">
                         <i class="fa-solid fa-compass"></i> Explore
                     </a>
                 </li>
@@ -76,7 +76,7 @@
             <button id="openSearchModal2" class="open-search-modal">
                 <i class="fa-solid fa-search"></i>
             </button>
-            <a href="{% url "feed:explore" %}">
+            <a href="{% url "feed:explore" %}" class="{% if request.path == '/explore/' %}active-link{% endif %}">
                 <i class="fa-solid fa-compass"></i>
             </a>
             <a href="#">
