--- a/EchoFeed/feed/templates/feed/explore.html
+++ b/EchoFeed/feed/templates/feed/explore.html
@@ -8,6 +8,10 @@
 
 {% block main %}
 
+<div class="loader" id="loader" style="display:none;">
+    <img src="{% static 'images/loader.svg' %}" alt="Loading...">
+</div>
+
 <h1 class='explore-h1'>Explore EchoFeed</h1>
 <div class="posts">
     {% for post in random_posts %}
@@ -17,143 +21,6 @@
     {% endfor %}
 </div>
 
-<!-- Post Modal -->
-<div class="post-modal" id="postModal">
-    <button class="close-modal" id="close-modal">&times;</button>
-    <!-- image -->
-    <div class="post-image">
-        <img src="" alt="Loading">
-    </div>
+{% include "post.html" %}
 
-    <!-- Comment -->
-    <div class="post-comment">
-        <!-- User Detail -->
-        <div class="user-detail">
-            <div class="details">
-                <div class="user-image">
-                    <img src="" alt="">
-                </div>
-                <div class="other-detail">
-                    <p id="profileUsername" style="display:none;">Username</p>
-                    <strong><a href="">Username</a></strong>
-                    <button class="follow">Follow</button>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <!-- Comments -->
-        <div class="comments">
-            <div class="user-detail">
-                <div class="user-image">
-                    <img src="" alt="">
-                </div>
-                <div class="other-detail">
-                    <strong><a href="">Username</a></strong>
-                    <div class="comment">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt perspiciatis nobis maiores
-                        eius vitae eum nam repudiandae veniam quibusdam eos sint, magnam, molestias eligendi atque
-                        ab, cumque iure est esse?
-                    </div>
-                </div>
-            </div>
-            <div class="user-detail">
-                <div class="user-image">
-                    <img src="" alt="">
-                </div>
-                <div class="other-detail">
-                    <strong><a href="">Username</a></strong>
-                    <div class="comment">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt perspiciatis nobis maiores
-                        eius vitae eum nam repudiandae veniam quibusdam eos sint, magnam, molestias eligendi atque
-                        ab, cumque iure est esse?
-                    </div>
-                </div>
-            </div>
-            <div class="user-detail">
-                <div class="user-image">
-                    <img src="" alt="">
-                </div>
-                <div class="other-detail">
-                    <strong><a href="">Username</a></strong>
-                    <div class="comment">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt perspiciatis nobis maiores
-                        eius vitae eum nam repudiandae veniam quibusdam eos sint, magnam, molestias eligendi atque
-                        ab, cumque iure est esse?
-                    </div>
-                </div>
-            </div>
-            <div class="user-detail">
-                <div class="user-image">
-                    <img src="" alt="">
-                </div>
-                <div class="other-detail">
-                    <strong><a href="">Username</a></strong>
-                    <div class="comment">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt perspiciatis nobis maiores
-                        eius vitae eum nam repudiandae veniam quibusdam eos sint, magnam, molestias eligendi atque
-                        ab, cumque iure est esse?
-                    </div>
-                </div>
-            </div>
-            <div class="user-detail">
-                <div class="user-image">
-                    <img src="" alt="">
-                </div>
-                <div class="other-detail">
-                    <strong><a href="">Username</a></strong>
-                    <div class="comment">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt perspiciatis nobis maiores
-                        eius vitae eum nam repudiandae veniam quibusdam eos sint, magnam, molestias eligendi atque
-                        ab, cumque iure est esse?
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <!-- Like Comment -->
-        <div class="like-comment">
-            <div class="buttons">
-                <button class="like-button">
-                    <i class="fa-regular fa-heart"></i>
-                </button>
-                <button class="unlike-button">
-                    <i class="fa-solid fa-heart liked"></i>
-                </button>
-                <button class="comment-button">
-                    <i class="fa-regular fa-comment"></i>
-                </button>
-                <button class="share-button">
-                    <i class="fa-solid fa-share-nodes"></i>
-                </button>
-                <button class="save-post-button">
-                    <i class="fa-regular fa-bookmark"></i>
-                </button>
-            </div>
-            <div class="like-count">
-                <strong></strong><span> Likes</span><br>
-                <small>25 November 2025</small>
-            </div>
-            <div class="make-comment">
-                <textarea name="comment" id="comment"></textarea>
-                <button class="comment-submit-button">Comment</button>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
-{% block js %}
-<script>
-    const csrfToken = "{{ csrf_token }}";
-    const showPost = "{% url 'feed:show_post' %}"
-    const followUrl = "{% url 'feed:follow' %}";
-    const unfollowUrl = "{% url 'feed:unfollow' %}";
-    const likeUrl = "{% url 'posts:like' %}";
-    const unlikeUrl = "{% url 'posts:unlike' %}";
-    $.ajaxSetup({
-        headers: { "X-CSRFToken": csrfToken }
-    });
-</script>
-<script src="{% static 'js/handleFollowUnfollow.js' %}"></script>
-<script src="{% static 'js/handleLikeUnlike.js' %}"></script>
-<script src="{% static 'js/postClick.js' %}"></script>
 {% endblock %}
