--- a/EchoFeed/feed/templates/post2.html
+++ b/EchoFeed/feed/templates/post2.html
@@ -19,6 +19,7 @@
                     <strong><a href="">Username</a></strong>
                     {% if request.path != '/profile/' %}
                     <button class="follow">Follow</button>
+                    <button class="unfollow">Unfollow</button>
                     {% endif %}
                 </div>
             </div>
