--- a/EchoFeed/settings/templates/settingsBase.html
+++ b/EchoFeed/settings/templates/settingsBase.html
@@ -1,13 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
+    {% block css %}{% endblock %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <title></title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="container">
@@ -68,9 +70,32 @@
         </div>
         
         <div class="main">
+        {% block main %}
             <h2>Welcome to EchoFeed</h2>
             <p>This is the main content area. Resize the screen to see the responsive sidebar in action.</p>
+        {% endblock %}
         </div>
     </div>
+    <script>
+        const csrfToken = "{{ csrf_token }}";
+        const showPost = "{% url 'feed:show_post' %}";
+        const followUrl = "{% url 'feed:follow' %}";
+        const unfollowUrl = "{% url 'feed:unfollow' %}";
+        const likeUrl = "{% url 'posts:like' %}";
+        const unlikeUrl = "{% url 'posts:unlike' %}";
+        const fetchComments = "{% url 'posts:fetch_comments' %}";
+        const submitCommentUrl = "{% url 'posts:submit_comment' %}";
+        const currentUsername = '{{user.username}}';
+        const searchUrl = "{% url 'feed:profile_search' %}";
+        const checkUsernameUrl = "{% url 'check_username' %}";
+        const updateProfileUrl = "{% url 'feed:update_profile' %}";
+        const uploadPostUrl = "{% url 'posts:upload_post' %}";
+        const showFollow = "{% url 'feed:show_follow' %}";
+        $.ajaxSetup({
+            headers: { "X-CSRFToken": csrfToken }
+        });
+    </script>
+    {% block js %}
+    {% endblock %}
 </body>
 </html>
