--- a/EchoFeed/feed/static/css/styles.css
+++ b/EchoFeed/feed/static/css/styles.css
@@ -368,3 +368,46 @@ div#followerModal{
         display: none;
     }
 }
+
+.toggle-switch {
+    position: relative;
+    width: 50px;
+    height: 25px;
+  
+    input {
+      display: none; 
+    }
+  
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      border-radius: 25px;
+      transition: 0.4s;
+  
+      &::before {
+        position: absolute;
+        content: "";
+        height: 19px;
+        width: 19px;
+        left: 3px;
+        bottom: 3px;
+        background-color: white;
+        border-radius: 50%;
+        transition: 0.4s;
+      }
+    }
+  
+    input:checked + .slider {
+      background-color: #1877f2;
+  
+      &::before {
+        transform: translateX(25px);
+      }
+    }
+  }
+  
