--- a/EchoFeed/settings/templates/settings/editProfile.html
+++ b/EchoFeed/settings/templates/settings/editProfile.html
@@ -1,6 +1,56 @@
 {% extends "settingsBase.html" %}
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static "css/editProfile.css" %}">
+{% endblock %}
+{% block title %}Edit Profile{% endblock %}
 {% block main %}
-<div class="p">
+<div class="container edit-profile-container">
+    <h1>Edit profile</h1>
+    <div class="profile-section">
+        <div class="profile-info">
+            <!-- Profile Image -->
+            <img id="profile-pic" src="{{user_info.profile_image.url}}" alt="Profile Picture" class="profile-pic">
+            <div>
+                <p class="username">{{user_info.user.username}}</p>
+                <p class="full-name">{{user_info.nickname}}</p>
+            </div>
+        </div>
     
+        <!-- File Input for Image Upload -->
+        <label for="file-input" class="change-photo-btn">Change photo</label>
+        <input type="file" id="file-input">
+    </div>
+    
+
+    <form class="edit-form" method="POST" enctype="multipart/form-data">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Username" value="{{user_info.user.username}}">
+
+        <label for="nickname">Nickanme</label>
+        <input type="text" id="nickname" placeholder="Nickanme" value="{{user_info.nickname}}">
+
+        <label for="bio">Bio</label>
+        <textarea id="bio-input" placeholder="Bio" maxlength="250">{{user_info.bio}}</textarea>
+        <div class="char-count"><span id="char-count">{{user_info.bio|length}}</span> / 250</div>
+
+        <label for="gender">Gender</label>
+        <select id="gender">
+            <option value="no" {% if gender == 'no' %}selected{% endif %}>Prefer not to say</option>
+            <option value="Male" {% if gender == 'Male' %}selected{% endif %}>Male</option>
+            <option value="Female" {% if gender == 'Female' %}selected{% endif %}>Female</option>
+            <option value="Other" {% if gender == 'Other' %}selected{% endif %}>Other</option>
+        </select>
+        <p class="note">This won't be part of your public profile.</p>
+
+        <button type="button" class="save-profile-btn">Save</button>
+    </form>
 </div>
+<div id="alertBox" class="alert-box">
+    {% comment %} This is an alert message! {% endcomment %}
+</div>
+{% endblock %}
+{% block js %}
+<script src="{% static 'js/showAlert.js' %}"></script>
+<script src="{% static "js/editProfile2.js" %}"></script>
 {% endblock %}
