--- a/EchoFeed/feed/templates/base.html
+++ b/EchoFeed/feed/templates/base.html
@@ -52,7 +52,7 @@
                         <i class="fa-solid fa-compass"></i> Explore
                     </a>
                 </li>
-                <li>
+                {% comment %} <li>
                     <a href="#">
                         <i class="fa-solid fa-envelope"></i> Messages
                     </a>
@@ -66,7 +66,7 @@
                     <a href="{% url "feed:new" %}">
                         <i class="fa-solid fa-bell"></i> Info
                     </a>
-                </li>
+                </li> {% endcomment %}
                 <li>
                     <a href="{% url 'feed:profile' %}" class="{% if request.path == '/profile/' %}active-link{% endif %}">
                         <i class="fa-solid fa-user"></i> Profile
